# Shieldpay

./: LICENSE  README.md  main.py  pyproject.toml  shieldpay.db
src/application/: use_case.py
src/domain/: entities.py  exceptions.py  interfaces.py  repositories.py  value_objects.py
src/infrastructure/: database.py  models.py  sqlalchemy_repository.py  unit_of_work.py
src/infrastructure/services/: authorizer_service.py  notification_service.py
src/web/: api.py
